Fix horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -5,8 +5,11 @@ body {
     padding: 0;
     margin: 0;
     width: 100%;
+    overflow: hidden;
 }
 
+::-webkit-scrollbar{width:2px;height:2px;}
+::-webkit-scrollbar-button{width:2px;height:2px;}
 
 html {
     height: 100%;
@@ -15,17 +18,41 @@ html {
     width: 100%;
 }
 
-.MainContainer {
-    position: static;
-    left: 5%;
+.MainHolder {
+    position: absolute;
+
     width: 100%;
-    height: auto;
+    top:100%;
+    height: 100vw;
+    overflow-y:auto;
+    overflow-x:auto;
+    transform:rotate(-90deg) translateY(-10px);
+    transform-origin:left top;
     padding: 0;
     margin: 0;
+    border: 1px solid red;;
+}
+#usersearch{
+    position: relative;
+    top: 0%;
+    z-index: 10;
+}
+.MainHolder > .MainHolderDiv{
+transform:rotate(90deg) translateY(20%);
+transform-origin: left top;
+}
+.MainHolder .MainHolderDiv{
+    
+    margin: 0 auto;
+    position: fixed;
+    border: 1px solid magenta;
+    left:25%;
 
-    transition: 1s transform;
 }
 
+.MainHolder::-webkit-scrollbar {
+    display: none;
+  }
 
 .book {
     position: relative;
@@ -38,24 +65,23 @@ html {
 }
 
 .container:hover {
-    -webkit-transform: scale(1.2);
-    transform: scale(1.2);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 .container:hover ~ .container {
-    transform: translate3d(20%, 0, 0);
+    transform: translate3d(10%, 0, 0);
 }
 
 .container {
-
+position: relative;
+    border: 1px solid blue;
     width: 100%;
     height: auto;
     transition: 1s transform;
     -webkit-transition: 1s;
     transform-origin: 0px 0px;
     -webkit-transform-origin: 0px 0px;
-
-
 
     padding: 0;
 }
@@ -78,7 +104,6 @@ td {
     -ms-user-select: none;
     user-select: none;
     cursor: default;
-
     margin: 0;
     position: relative;
     top: 25%;
@@ -90,7 +115,6 @@ td {
     width: 44%;
     margin:0;
   padding-bottom: 56.25%;
-
     overflow: hidden;
     
 }
